Updating with amendment 9

--- a/bylaws_v1.10.tex
+++ b/bylaws_v1.10.tex
@@ -69,7 +69,7 @@
 1.6 & Amendments to S8.4 for the transition from Postdoctoral to Senior membership, revises``Intended Senior Membership Status" & 01/21/2021 & \\ \hline
 1.7 & Amendments to Figure 1 and Section 5.2 & & 04/22/22 \\ \hline
 1.8 & Amendments to Sections 1.2, 5.1, 7, and 7.2 and Figure 1 to redefine Technical Working Groups, preserving the intent of unamended Sections 7.2, 9.2, and 9.3 &  & 04/22/22\\ \hline
-1.9 & \textcolor{blue}{Amendments to Section 8 to clarify membership types, status qualifiers, and processes} & & \\ \hline
+1.9 & Amendments to Section 8 to clarify membership types, status qualifiers, and processes & & \\ \hline
 1.10 & Amendments to Sections 2,3.1,3.3,3.4,6.3,7.3-7.7,10.2 to address minor inconsistencies and extend GB attendance requirements to account for extenuating circumstances & 09/15/2021 & 04/22/22 \\ \hline
 & & &\\ \hline
 \end{tabular}
@@ -324,98 +324,7 @@ The committee has two Co-chairs that share equal responsibilities and are appoin
 
 \section{Membership Policy}
 
-The Collaboration consists of Ph.D. scientists, engineers, Ph.D. thesis students and others who contribute significantly to the \collabname\ program. Membership conveys certain rights as described below, but comes with the obligation of an ongoing commitment of a substantial fraction of members' research time to the \collabname\ program. \\
-
-{\color{blue}
-
-\noindent STRIKE ALL ITALICISED BLUE TEXT \\
-
-{\it
-{\large \noindent 8.1 Membership Types}\\
-
-Five types of members are defined here.  
-\begin{itemize}
-
-\item {Senior Member:} A Senior Member of the Collaboration is a member who has a permanent appointment or an appointment, that under normal circumstances can be expected to be renewed indefinitely.   This includes tenure-track appointments at universities and their equivalents elsewhere.  
-
-\item {Postdoctoral Member:} A postdoc working with a Senior Member at their institution can be designated as a Postdoctoral Member by that Senior Member. Postdocs that are not working closely with a Senior Member (hereafter referred to as ``Independent Postdocs'') can apply to become a Postdoctoral Member and have their application evaluated by the Membership Committee on a case-by-case basis.
-
-\item {Student Member:} A graduate student working with a Senior Member at their institution can be designated as a Student Member by that Senior Member.  We do not anticipate granting membership to students who are not supervised by a Senior Member.
-
-
-\item {Provisional Member:}  A Provisional Member has not yet been approved for Senior, Postdoctoral or Student Member status.  This status applies to all new Student and Postdoctoral Members (including, for example, those in an existing Senior Member's group) as well as potential Senior Members.  This is intended to be a temporary status, typically a year, allowing the Provisional Member to demonstrate sufficient constructive engagement with the Collaboration.
-
-\item {Legacy Member:}  A Legacy Member is a former member who contributed in a key manner to the Project or analysis infrastructure, but is no longer engaged with the Collaboration and is therefore no longer a member.  This status is intended to convey authorship rights to such former members, and to bypass the normal membership procedures should they wish to re-engage with the Collaboration.
-
-\end{itemize}
-
-{\large \noindent 8.2 Membership Rights}\\
-
-Herein, ``Members'' refers to Senior, Postdoctoral, Student and Provisional Members (but not Legacy Members) unless otherwise qualified.  
-
-\begin{itemize}
-
-\item Senior and Postdoctoral Members are Voting Members.  Voting Members  have the right to vote to ratify Bylaws and amendments to Bylaws, and vote in elections for Spokespersons, Governing Board representatives, and the elected positions including the Chairs of the Science Council, and the Membership and Publication and Speakers Committees.   
-
-\item Members have full data access, including during the proprietary period for data that are eventually released.
-
-\item Members (including Legacy Members) have the right to be listed as a co-author on \collabname\ publications as specified in the Publication Policy (see section 9.4).
-
-\item Members have access to computational resources designated for \collabname, according to the policies of the relevant Computational Resources Working Group.
-
-\end{itemize}
-
-{\large \noindent 8.3 Membership Requirements}\\
-
-Members must commit effort to approved infrastructure tasks. The Membership Committee will work with the \exec\ to define and recommend infrastructure tasks that need filling, and to define and communicate with Members the level of expected effort. Tasks can include,  for example, designing, building, and testing software, hardware, or simulations; contributing to commissioning and observations; and management tasks.  Just as for the hardware, we anticipate having a collaboration-wide architecture for the software.  Thus, Members are expected to comply with interface, documentation and code review requirements in support of the goals of the Collaboration.   Other ways of contributing include taking on roles in the governance, including membership on the GB, EVC, ET, or the Councils and Committees described in \S\ref{sec:councils}.\\
-
-{\large \noindent 8.4 Membership Application and Approval Process}\\
-
-After the Collaboration is formed with a first set of initial members (see \S\ref{sec:initmembership}), the process for membership to \collabname\ will be as specified below.
-
-\begin{itemize}
-
-\item Potential Senior Members will apply for Provisonal Membership via a written application where they specify their proposed work on \collabname. Applicants who have already made significant contributions to CMB-S4, either as a postdoctoral member or as a non-member, may be recommended for non-provisional (regular) Senior membership by the Membership Committee.
-
-
-\item Potential Independent Postdocs can apply for Postdoctoral Membership and have their applications reviewed on a case-by-case basis.
-  
-\item Postdoctoral members can request Òintended senior membership statusÓ when applying to permanent positions by submitting a proposed research plan to the Membership Committee. If approved, they can request a letter from the Spokespersons describing their relationship to CMB-S4 to include in their application packages, or to pass to their letter writers.  Intended senior members who successfully transition to a permanent position are expected to follow the normal application process for provisional senior membership.
-
-\item Applications are reviewed by the Membership Committee. The Membership Committee recommends membership to the Governing Board.  The Governing Board approves membership.
-
-\end{itemize}
-
-{\large \noindent 8.5 Initial Membership}\\
-
-The Collaboration will initially consist of members that were eligible to vote on these governance Bylaws (by virtue of attendance at two or more Collaboration meetings, or a successful petition for eligibility), and did cast a vote on them. Within the first year of the Collaboration's establishment, prospective members can be granted membership by successfully petitioning the Membership Committee despite not satisfying the above criteria.  The Membership Committee may approve such applications during the first year without action by the Governing Board.  
-
-{\large \noindent 8.6 Membership Review and Changes in Status}\\
-
-The membership status of each member will be reviewed by the Membership Committee each year. 
-
-\begin{itemize} 
-
-\item Each Senior Member and each Independent Postdoc will submit an annual activity report to the Membership Committee. Reports of the Senior Members should include discussion of the activities of their supervisees (e.g., postdocs and students) in their report. The Membership Committee will review those reports, consulting with Collaboration members and Working Group leaders as appropriate.
-  
-\item Provisional Members will submit an annual activity report to the Membership Committee, which will review the report and determine whether the Provisional Member should be promoted to a Senior Member status, continue as a Provisional Member, or have their membership revoked.  Provisional Membership is intended to be a temporary status.
-
-\item Members leaving the Collaboration may be granted Legacy Membership upon review by the Membership Committee and approval by the GB.
-
-\item The Governing Board has the authority to grant or terminate all forms of membership.
-
-\item If the effort of any Member appears insufficient, the Membership Committee will consult with the Spokespersons to develop a plan to remedy the situation.  If needed, the Spokespersons will work with the Membership Committee to prepare a recommendation to the GB for corrective action, including suspension or termination of membership.   This can also be done should the Membership Committee deem the actions of a Member to have been egregious and detrimental to the Collaboration.
-
-\item When a person's membership in the Collaboration ends, they will no longer have access to the \collabname\ document and database repository, internal forums, computing resources and data.  Authorship rights will continue, or not, as prescribed in the Publication Policy bylaws.
-
-\end{itemize}
-
-}
-
-
-\newpage
-
-\noindent REPLACE ABOVE WITH FOLLOWING BLUE TEXT
+The Collaboration consists of Ph.D. scientists, engineers, Ph.D. thesis students and others who contribute significantly to the \collabname\ program. Membership conveys certain rights as described below, but comes with the obligation of an ongoing commitment of a substantial fraction of members' research time to the \collabname\ program.
 
 \subsection{Membership Types}
 \label{sec:memtypes}
@@ -439,6 +348,7 @@ A Legacy member is a former Senior or Postdoctoral member who has made especiall
 
 \end{itemize}
 
+\vspace*{0.1in}
 \noindent
 The four status qualifiers are:
 
@@ -448,7 +358,7 @@ The four status qualifiers are:
 This is the normal membership type, assumed unless otherwise specified in these bylaws.
 
 \item {\bf Provisional:} 
-New Senior, Postdoctoral and Student members will normally start with a Provisional status. This is intended to be a temporary status allowing the Provisional member to demonstrate sufficient constructive engagement with the Collaboration. New members who have already made substantive contributions to CMB-S4 may be deemed to have demonstrated sufficient engagement and be appointed as Full members. \sout{Provisional Postdoctoral and Student members who were designated as members by a Provisional Senior member may not be raised to Full status before that Senior member.}
+New Senior, Postdoctoral and Student members will normally start with a Provisional status. This is intended to be a temporary status allowing the Provisional member to demonstrate sufficient constructive engagement with the Collaboration. New members who have already made substantive contributions to CMB-S4 may be deemed to have demonstrated sufficient engagement and be appointed as Full members. 
 
 \item {\bf Pending:} 
 Postdoctoral and Student members whose membership term has expired, but whose membership has not yet been renewed, will be moved into Pending status. 
@@ -511,8 +421,6 @@ The membership status of each member will be reviewed by the Membership Committe
 Procedures that could lead to loss of Membership for strong or persistent violations of the \collabname\ Code of Conduct are described in that document.
 
 \end{itemize}
-
-}
 
 \section{Publication and Speakers Policy}
 \label{sec:pub}
