Updating to GB ratified version 1.13

--- a/bylaws_v1.13.tex
+++ b/bylaws_v1.13.tex
@@ -76,8 +76,8 @@
 1.9 & Amendments to Section 8 to clarify membership types, status qualifiers, and processes & & \\ \hline
 1.10 & Amendments to Sections 2,3.1,3.3,3.4,6.3,7.3-7.7,10.2 to address minor inconsistencies and extend GB attendance requirements to account for extenuating circumstances & 09/15/2021 & 04/22/22 \\ \hline
 1.11 & Amendments to Sections 6.3, 8.2, 9.4 to address minor inconsistencies: representation requirements for full GB board, data access granted to Project member, actions to fulfil categories for GB, authorship rights for provisional members. Amendments to Sections 9 to address minor inconsistencies raised during collaboration review: the Section refers to publication planning, managing, preparation, submission, while the word ``project'' is used elsewhere with different meanings, and therefore mentions to projects has been removed from this Section and substituted with appropriate ones & 04/05/2023 & 03/12/23 \\ \hline
-1.12 & Amendments to Sections 6.1, 6.2, 6.3, and 8.2 clarifying that provisional members cannot run for elected office & 10/20/2024 & TBD \label{tab:version} \\ \hline
-1.13 & Amendments to Section 9.3 describing the publication policy for conference proceedings & 10/20/2024 & TBD \label{tab:version} \\ \hline
+1.12 & Amendments to Sections 6.1, 6.2, 6.3, and 8.2 clarifying that provisional members cannot run for elected office & 11/22/2024 & TBD \label{tab:version} \\ \hline
+1.13 & Amendments to Section 9.3 describing the publication policy for conference proceedings & 11/22/2024 & TBD \label{tab:version} \\ \hline
 %& & &\\ \hline
 %\end{tabular}
 %\end{center}
@@ -241,7 +241,7 @@ Each candidate provides a Candidate Statement to the EVC, which makes them avail
 
 \subsection{Spokespersons}
 
-Spokespersons are elected to two-year terms. All \textcolor{red}{Full} Senior members (see \S\ref{sec:memtypes}) may run for these positions.  If a member of the GB is elected as a Spokesperson, they must resign their GB seat prior to the start of their Spokesperson term and this vacancy will be filled in the next GB election.
+Spokespersons are elected to two-year terms. All Full Senior members (see \S\ref{sec:memtypes}) may run for these positions.  If a member of the GB is elected as a Spokesperson, they must resign their GB seat prior to the start of their Spokesperson term and this vacancy will be filled in the next GB election.
 
 Prior to the election, Voting members are asked to nominate individuals for Spokesperson to the Election and Voting Commission. Each Voting member may nominate candidates and self-nominations are accepted. After a nomination period, the EVC consults with the nominees to ascertain their willingness to stand for the election.
 
@@ -249,7 +249,7 @@ A ranked voting scheme approved by the GB prior to the election is used to deter
 
 \subsection{Council and Committee Chairs}
 
-The co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All \textcolor{red}{Full} Senior members (see \S\ref{sec:memtypes}) may  run for these positions.  If a Voting member of the GB is elected to one of these positions, they must resign their GB seat prior to taking office as Chair, and this vacancy will be filled in the next GB election.
+The co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All Full Senior members (see \S\ref{sec:memtypes}) may  run for these positions.  If a Voting member of the GB is elected to one of these positions, they must resign their GB seat prior to taking office as Chair, and this vacancy will be filled in the next GB election.
 
 Prior to the election, Voting members are asked to nominate individuals for the Chair positions to the EVC. Self-nominations are accepted. After a nomination period, the EVC consults with the nominees to ascertain their willingness to stand for the election. Candidates are only allowed to stand for one open position in a given election.
 
@@ -259,7 +259,7 @@ A ranked voting scheme approved by the GB prior to the election is used to deter
 \subsection{Governing Board}
 \label{sec:gb-elections}
 
-The 18 GB members drawn from the Senior members of the Collaboration are elected to two-year terms. Elections for GB members are arranged so that 50\% of the members will be up for election each year. All \textcolor{red}{Full} Senior members may run for these positions. The one GB member drawn from the Postdoctoral members of the Collaboration is elected for a one-year term. Prior to each election, the current GB will define various representation requirements that it deems important to include on the full GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.); no more than 50\% of the open seats on the board in an election can be reserved for such requirements.
+The 18 GB members drawn from the Senior members of the Collaboration are elected to two-year terms. Elections for GB members are arranged so that 50\% of the members will be up for election each year. All Full Senior members may run for these positions. The one GB member drawn from the Postdoctoral members of the Collaboration is elected for a one-year term. Prior to each election, the current GB will define various representation requirements that it deems important to include on the full GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.); no more than 50\% of the open seats on the board in an election can be reserved for such requirements.
 
 The election for the Senior members on the GB proceeds as follows.
 Prior to the election, Voting members are asked to nominate individuals for the GB to the EVC. Self-nominations are accepted. It is the responsibility of the EVC in consultation with the GB to recruit candidates for the GB elections in order to satisfy the representation requirements described above. After a nomination period, the EVC consults with the nominees to ascertain their willingness to stand for the election. A ranked voting scheme approved by the GB prior to the election is used for the GB election. Adoption of a ranked voting scheme that differs from that used during the previous election requires approval of a supermajority of the GB. The EVC will synthesize the voting results to provide a ranked list of all the candidates to the GB.
@@ -386,7 +386,7 @@ Herein, ``members'' refers to Senior, Postdoctoral and Student members (but not 
 
 \item Non-provisional Senior and Postdoctoral members are Voting members.  Voting members have the right to vote to ratify Bylaws and amendments to Bylaws, and vote in elections for Spokespersons, Governing Board representatives, and the elected positions including the Chairs of the Science Council, and the Membership and Publication and Speakers Committees.
 
-\item \textcolor{red}{Provisional members are not eligible to run for elected positions.}
+\item Provisional members are not eligible to run for elected positions.
 
 \item Members have full data access, including during the proprietary period for data that are eventually released. Full data access is also granted to Project members.
 
@@ -453,21 +453,21 @@ Any Collaboration member may propose a Collaboration research plan to an appropr
 
 \item ``Non-key Science'' represent other science goals and use Collaboration science data.
 
-\item \textcolor{red}{``}Other forecasts and technical reports\textcolor{red}{''} are Collaboration-vetted plans that do not require Collaboration science data\textcolor{red}{. \st{and may lead to a publication or conference proceeding.}}
+\item ``Other forecasts and technical reports'' are Collaboration-vetted plans that do not require Collaboration science data.
 
 \end{enumerate}
 
-\textcolor{red}{The following types of publications are exempt from the Publication Board process:}
+The following types of publications are exempt from the Publication Board process:
 
 \begin{itemize}
 
-\item \textcolor{red}{Any conference proceeding (scientific or technical) that contains no unpublished results. The status of ``no new results'', and any subsequent review path (e.g. full vs only within the working group), is determined by the relevant working group chair, or if the WG chair is an author then by a Science Council chair or relevant L2.}
+\item Any conference proceeding (scientific or technical) that contains no unpublished results. The status of ``no new results,'' and any subsequent review path (e.g. full vs only within the working group), is determined by the relevant working group chair, or if the WG chair is an author then by a Science Council chair or relevant L2.
 
-\item \textcolor{red}{Any conference proceeding substantially on the Project side.  In this case, the Project decides on its treatment. The status of ``substantially Project'' is determined by agreement of the relevant L2 and a Science Council chair; if they do not agree then the proceeding goes through the Pub Board process, but a single reviewer may be used during the internal review process.}
+\item Any conference proceeding substantially on the Project side.  In this case, the Project decides on its treatment. The status of ``substantially Project'' is determined by agreement of the relevant L2 and a Science Council chair; if they do not agree then the proceeding goes through the Pub Board process, but a single reviewer may be used during the internal review process.
 
 \end{itemize}
 
-\textcolor{red}{Any conference proceeding substantially on the collaboration side that contains unpublished results does have to go through the Publication Board process, but a single reviewer may be used during the internal review. The status of ``substantially collaboration'' is determined by a Science Council chair.}
+Any conference proceeding substantially on the collaboration side that contains unpublished results does have to go through the Publication Board process, but a single reviewer may be used during the internal review. The status of ``substantially collaboration'' is determined by a Science Council chair.
 
 The Science Council will maintain the list of Key Science topics, to be established prior to any publication being initiated.  Topics can be added to the Key Science paper list and reviewed in coordination with the Publication Board.
 
