Fixing typo in amendment table

--- a/bylaws_v1.13.tex
+++ b/bylaws_v1.13.tex
@@ -76,8 +76,8 @@
 1.9 & Amendments to Section 8 to clarify membership types, status qualifiers, and processes & & \\ \hline
 1.10 & Amendments to Sections 2,3.1,3.3,3.4,6.3,7.3-7.7,10.2 to address minor inconsistencies and extend GB attendance requirements to account for extenuating circumstances & 09/15/2021 & 04/22/22 \\ \hline
 1.11 & Amendments to Sections 6.3, 8.2, 9.4 to address minor inconsistencies: representation requirements for full GB board, data access granted to Project member, actions to fulfil categories for GB, authorship rights for provisional members. Amendments to Sections 9 to address minor inconsistencies raised during collaboration review: the Section refers to publication planning, managing, preparation, submission, while the word ``project'' is used elsewhere with different meanings, and therefore mentions to projects has been removed from this Section and substituted with appropriate ones & 04/05/2023 & 03/12/23 \\ \hline
-1.12 & Amendments to Sections 6.1, 6.2, 6.3, and 8.2 clarifying that provisional members cannot run for elected office & 11/22/2024 & TBD \label{tab:version} \\ \hline
-1.13 & Amendments to Section 9.3 describing the publication policy for conference proceedings & 11/22/2024 & TBD \label{tab:version} \\ \hline
+1.12 & Amendments to Sections 6.1, 6.2, 6.3, and 8.2 clarifying that provisional members cannot run for elected office & 10/20/2024 & 11/22/2024 \label{tab:version} \\ \hline
+1.13 & Amendments to Section 9.3 describing the publication policy for conference proceedings & 10/20/2024 & 11/22/2024 \label{tab:version} \\ \hline
 %& & &\\ \hline
 %\end{tabular}
 %\end{center}
