One more update to amendment 1.15

--- a/bylaws_v1.15_colored_changes.tex
+++ b/bylaws_v1.15_colored_changes.tex
@@ -376,7 +376,7 @@ The expectation is that this status would apply for one year or less.
 If the renewal would involve a change of membership type (from Student to Postdoctoral or Senior, or from Postdoctoral to Senior) then this status will afford them the intersection of the rights of the old and new membership types.
 
 \item {\bf Inactive:}
-Members who are deemed to be insufficiently engaged with the Collaboration, or who have failed to respond to requests for Annual Activity Reports or Membership Renewals in a timely manner, may be moved to Inactive status by the Membership Committee. A return to the member's prior status will be considered when the \st{appropriate }Annual Activity Report or \st{Membership Renewal} \textcolor{blue}{new membership application} is submitted in writing to the Membership Committee \textcolor{blue}{for review}. Inactive members retain their membership rights, but will typically be removed from the membership list, at the discretion of the Governing Board, after one year.
+Members who are deemed to be insufficiently engaged with the Collaboration, or who have failed to respond to requests for Annual Activity Reports \st{or Membership Renewals} in a timely manner, may be moved to Inactive status by the Membership Committee. A return to the member's prior status will be considered when the \st{appropriate }Annual Activity Report or \st{Membership Renewal} \textcolor{blue}{new membership application} is submitted in writing to the Membership Committee \textcolor{blue}{for review}. Inactive members retain their membership rights, but will typically be removed from the membership list, at the discretion of the Governing Board, after one year.
 
 \end{itemize}
 
